updated pulications and about me

--- a/_pages/about.html
+++ b/_pages/about.html
@@ -383,15 +383,19 @@ summary {
 }
 </style>
 <div class="column-left">
-<h2 id="about-me">About Me</h2>
-<p>Hi there! I am Shriti. I am a Ph.D. candidate at the School of Information, University of Michigan. I am a Human-Computer Interaction and a Personal Health Informatics researcher. I examine ways in which self-monitoring data is used or could be used by patients with chronic conditions and their clinicians to facilitate the care of chronic health conditions. I conceptualize, design, and evaluate novel tools and approaches to leverage personal health data towards the vision of enabling data-driven care. My research draws from the fields of human-computer interaction, sensemaking, information visualization, medicine, chronic illness management, and psychology to raise novel research questions that cut across disciplines. I use a combination of qualitative methods that include interviews, observations, focus groups, visualization-based think aloud sessions, task-driven visualization review, and user-centered design and evaluation. My work has been published in top Human-Computer Interaction venues including ACM CHI, IMWUT, and CSCW.</p>
+<h1 id="about-me">About Me</h1>
+<p>Hi there! I am Shriti. I am a Ph.D. candidate at the School of Information, University of Michigan. I am ABD and on the job market for 2021-22.</p>
+<p>I am a Human-Computer Interaction and a Personal Health Informatics researcher. I examine ways in which self-monitoring data is used or could be used by patients with chronic conditions and their clinicians to facilitate the care of chronic health conditions. I conceptualize, design, and evaluate novel tools and approaches to leverage personal health data towards the vision of enabling data-driven care. My research draws from the fields of human-computer interaction, sensemaking, information visualization, medicine, chronic illness management, and psychology to raise novel research questions that cut across disciplines.</p>
+<p>To answer interdisciplinary research questions, I use a combination of qualitative methods that include interviews, observations, focus groups, visualization-based think aloud sessions, task-driven visualization review, and user-centered design and evaluation. My work has been published in top Human-Computer Interaction venues including ACM CHI, IMWUT, and CSCW.</p>
 </div>
 <div class="column-right">
-<h2 id="whats-happening">What’s Happening?</h2>
+<h1 id="news">News</h1>
+<p>07/07/2021 I am on the academic job market. Looking for tenure track positions.</p>
+<p>04/28/2021 Defended my dissertation proposal.</p>
 <p>03/14/2021 Received the Rackham Predoctoral Fellowship award!</p>
 <p>03/13/2021 Presented my research to students of the Health Communication program at Northwestern.</p>
-<p>10/26/2020 Paper accepted to UbiComp 2020</p>
-<p>13/11/2019 Presented at UbiComp 2019</p>
+<p>10/26/2020 Paper accepted to UbiComp 2020.</p>
+<p>13/11/2019 Presented at UbiComp 2019.</p>
 </div>
 
 
