--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -366,12 +366,48 @@ summary {
 
 
 <hr />
-<div id="title-publications" class="section level2">
-<h2>title: “Publications”</h2>
-<p><strong>My blood sugar is higher on the weekends”: Finding a Role for Context and Context-Awareness in the Design of Health Self-Management Technology.</strong><br />
+<p>title: permalink: /publications —</p>
+<style>
+.publication{
+  font-family: arial;
+  font-size: 12pt;
+}
+</style>
+<p class=".publication">
+<strong>Toward Lightweight In-situ Self-reporting: An Exploratory Study of Alternative Smartwatch Interface Designs in Context.</strong><br />
+Xinghui Yan, Shriti Raj, Bingjian Huang, Sun Young Park, and Mark W. Newman.<br />
+IMWUT 2020 <a href="http://academicpages.github.io/files/paper1.pdf">PDF</a>
+</p>
+<p class=".publication">
+<strong>Clinical Data in Context: Towards Sensemaking Tools for Interpreting Personal Health Data.</strong><br />
+Shriti Raj, Joyce M. Lee, Ashley Garrity, and Mark W. Newman.<br />
+IMWUT 2019 <a href="http://academicpages.github.io/files/paper2.pdf">PDF</a>
+</p>
+<p class=".publication">
+<strong>My blood sugar is higher on the weekends”: Finding a Role for Context and Context-Awareness in the Design of Health Self-Management Technology.</strong><br />
 Shriti Raj, Kelsey Toporski, Ashley Garrity, Joyce M. Lee, and Mark W. Newman.<br />
-CHI 2019 <a href="http://academicpages.github.io/files/paper3.pdf">PDF</a></p>
-</div>
+CHI 2019 <a href="http://academicpages.github.io/files/paper3.pdf">PDF</a>
+</p>
+<p class=".publication">
+<strong>Finding the Sweet Spot(s): Understanding Context to Support Physical Activity Plans.</strong><br />
+Gaurav Paruthi, Shriti Raj, Natalie Colabianchi, Predrag Klasnja, and Mark W. Newman.<br />
+IMWUT 2018
+</p>
+<p class=".publication">
+<strong>Heed: Exploring the Design of Situated Self-Reporting Devices.</strong><br />
+Gaurav Paruthi, Shriti Raj, Seungjoo Baek, Chuyao Wang, Chuan-che Huang, Yung-Ju Chang, and Mark W. Newman.<br />
+IMWUT 2018
+</p>
+<p class=".publication">
+<strong>Understanding Individual and Collaborative Problem-Solving with Patient-Generated Data: Challenges and Opportunities.</strong><br />
+Shriti Raj, Mark W. Newman, Joyce M. Lee, and Mark S. Ackerman.<br />
+CSCW 2017
+</p>
+<p class=".publication">
+<strong>Beyond Health Literacy: Supporting Patient-Provider Communication during an Emergency Visit.</strong><br />
+Sun Young Park, Yunan Chen, and Shriti Raj.<br />
+CSCW 2017.
+</p>
 
 
 
