--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -366,7 +366,7 @@ summary {
 
 
 <hr />
-<p>title: permalink: /publications —</p>
+<p>title: “Publications” permalink: /publications —</p>
 <style>
 .cite_text{
   font-family: arial;
