--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -371,6 +371,9 @@ summary {
   font-size: 12pt;
 }
 </style>
+<p style="font-size: 18pt; font-style: bold;">
+Publications
+</p>
 <p><strong>Toward Lightweight In-situ Self-reporting: An Exploratory Study of Alternative Smartwatch Interface Designs in Context.</strong><br />
 Xinghui Yan, Shriti Raj, Bingjian Huang, Sun Young Park, and Mark W. Newman.<br />
 IMWUT 2020 <a href="http://academicpages.github.io/files/paper1.pdf">PDF</a></p>
