publication URL update

--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -376,25 +376,25 @@ Publications
 </p>
 <p><strong>Toward Lightweight In-situ Self-reporting: An Exploratory Study of Alternative Smartwatch Interface Designs in Context.</strong><br />
 Xinghui Yan, Shriti Raj, Bingjian Huang, Sun Young Park, and Mark W. Newman.<br />
-IMWUT 2020 <a href="http://academicpages.github.io/files/paper1.pdf">PDF</a></p>
+IMWUT 2020 <a href="https://dl.acm.org/doi/abs/10.1145/3432212">ACM</a></p>
 <p><strong>Clinical Data in Context: Towards Sensemaking Tools for Interpreting Personal Health Data.</strong><br />
 Shriti Raj, Joyce M. Lee, Ashley Garrity, and Mark W. Newman.<br />
-IMWUT 2019 <a href="http://academicpages.github.io/files/paper2.pdf">PDF</a></p>
+IMWUT 2019 <a href="https://dl.acm.org/doi/abs/10.1145/3314409">ACM</a></p>
 <p><strong>My blood sugar is higher on the weekends”: Finding a Role for Context and Context-Awareness in the Design of Health Self-Management Technology.</strong><br />
 Shriti Raj, Kelsey Toporski, Ashley Garrity, Joyce M. Lee, and Mark W. Newman.<br />
-CHI 2019 <a href="http://academicpages.github.io/files/paper3.pdf">PDF</a></p>
+CHI 2019 <a href="https://dl.acm.org/doi/abs/10.1145/3290605.3300349">PDF</a> <em>Best paper honorable mention award</em></p>
 <p><strong>Finding the Sweet Spot(s): Understanding Context to Support Physical Activity Plans.</strong><br />
 Gaurav Paruthi, Shriti Raj, Natalie Colabianchi, Predrag Klasnja, and Mark W. Newman.<br />
-IMWUT 2018</p>
+IMWUT 2018 <a href="https://dl.acm.org/doi/abs/10.1145/3191761">ACM</a></p>
 <p><strong>Heed: Exploring the Design of Situated Self-Reporting Devices.</strong><br />
 Gaurav Paruthi, Shriti Raj, Seungjoo Baek, Chuyao Wang, Chuan-che Huang, Yung-Ju Chang, and Mark W. Newman.<br />
-IMWUT 2018</p>
+IMWUT 2018 <a href="https://dl.acm.org/doi/abs/10.1145/3264942">ACM</a></p>
 <p><strong>Understanding Individual and Collaborative Problem-Solving with Patient-Generated Data: Challenges and Opportunities.</strong><br />
 Shriti Raj, Mark W. Newman, Joyce M. Lee, and Mark S. Ackerman.<br />
-CSCW 2017</p>
+CSCW 2017 <a href="https://dl.acm.org/doi/abs/10.1145/3134723">ACM</a></p>
 <p><strong>Beyond Health Literacy: Supporting Patient-Provider Communication during an Emergency Visit.</strong><br />
 Sun Young Park, Yunan Chen, and Shriti Raj.<br />
-CSCW 2017.</p>
+CSCW 2017 <a href="https://dl.acm.org/doi/abs/10.1145/2998181.2998357">ACM</a></p>
 
 
 
