--- a/_pages/about.html
+++ b/_pages/about.html
@@ -394,7 +394,7 @@ About Me
 <p style="font-size: 18pt; font-style: bold;">
 News
 </p>
-<p>07/07/2021 I am on the academic job market. Looking for tenure track positions.</p>
+<p>07/07/2021 I am on the job market for 2021-22.</p>
 <p>04/28/2021 Defended my dissertation proposal.</p>
 <p>03/14/2021 Received the Rackham Predoctoral Fellowship award!</p>
 <p>03/13/2021 Presented my research to students of the Health Communication program at Northwestern.</p>
