--- a/_pages/about.html
+++ b/_pages/about.html
@@ -387,19 +387,21 @@ summary {
 About Me
 </p>
 <p>Hi there! I am Shriti. I am a Ph.D. candidate at the School of Information, University of Michigan. I am ABD and on the job market for 2021-22.</p>
-<p>I am a Human-Computer Interaction and a Personal Health Informatics researcher. I examine ways in which self-monitoring data is used or could be used by patients with chronic conditions and their clinicians to facilitate the care of chronic health conditions. I conceptualize, design, and evaluate novel tools and approaches to leverage personal health data towards the vision of enabling data-driven care. My research draws from the fields of human-computer interaction, sensemaking, information visualization, medicine, chronic illness management, and psychology to raise novel research questions that cut across disciplines.</p>
+<p>I am a Human-Computer Interaction and a Health Informatics researcher. I examine ways in which self-monitoring data is used or could be used by patients with chronic conditions and their clinicians to facilitate the care of chronic health conditions. I conceptualize, design, and evaluate novel tools and approaches to leverage personal health data towards the vision of enabling data-driven care. My research draws from the fields of human-computer interaction, sensemaking, information visualization, medicine, chronic illness management, personal informatics, and health decision-support to raise novel research questions that cut across disciplines.</p>
 <p>To answer interdisciplinary research questions, I use a combination of qualitative methods that include interviews, observations, focus groups, visualization-based think aloud sessions, task-driven visualization review, and user-centered design and evaluation. My work has been published in top Human-Computer Interaction venues including ACM CHI, IMWUT, and CSCW.</p>
 </div>
 <div class="column-right">
 <p style="font-size: 18pt; font-style: bold;">
 News
 </p>
-<p>07/07/2021 I am on the job market for 2021-22.</p>
-<p>04/28/2021 Defended my dissertation proposal.</p>
-<p>03/14/2021 Received the Rackham Predoctoral Fellowship award!</p>
-<p>03/13/2021 Presented my research to students of the Health Communication program at Northwestern.</p>
-<p>10/26/2020 Paper accepted to UbiComp 2020.</p>
-<p>13/11/2019 Presented at UbiComp 2019.</p>
+<p>09/07/2021   Student volunteer for CSCW 2021.</p>
+<p>08/25/2021   Panelist for new Graduate Student Instructor orienation at UofM.</p>
+<p>07/07/2021   I am on the job market for 2021-22.</p>
+<p>04/28/2021   Defended my dissertation proposal.</p>
+<p>03/14/2021   Received the Rackham Predoctoral Fellowship award!</p>
+<p>03/13/2021   Presented my research to students of the Health Communication program at Northwestern.</p>
+<p>10/26/2020   Paper accepted to UbiComp 2020.</p>
+<p>13/11/2019   Presented at UbiComp 2019.</p>
 </div>
 
 
